add verify otp and update pass
