# internal/dto/login.dto.go
@@ -5,3 +5,19 @@ type RegisterRequest struct {
 	VerifyType    int    `json:"verify_type"`
 	VerifyPurpose string `json:"verify_purpose"`
 }
+
+type VerifyOTPRequest struct {
+	VerifyKey  string `json:"verify_key"`
+	VerifyCode string `json:"verify_code"`
+}
+
+type VerifyOTPResponse struct {
+	Token   string `json:"token"`
+	UserId  int    `json:"user_id"`
+	Message string `json:"message"`
+}
+
+type UpdatePasswordRegisterRequest struct {
+	Token    string `json:"token"`
+	Password string `json:"password"`
+}
